# Backtester

./: .gitignore  Devlog.md  README.md  charter.py  client.py  condition.json  glbx-mdp3-20100606-20250924.ohlcv-1d.dbn  glbx-mdp3-20100606-20250924.ohlcv-1d.dbn.zst  main.py  manifest.json  metadata.json  pyproject.toml  requirements.txt  setup.py  startup.sh  symbology.json  tradingUniverse.db
BackTester.egg-info/: PKG-INFO  SOURCES.txt
IBJts/source/proto/: Execution.proto
config/: dev.toml
db_sql/: __init__.py  queries.py
src/: DataFraming.py  OANDA_API.py  bootstrap.py  buyAndHold.py  charter.py  client.py  dailyDataWithRollovers.csv  dailyStdDev.py  dashboard.py  databaseInterface.py  databento.py  dbento.py  dbmanagement.py  main.py  messageBus.py  retriever.py  sma.py  sqliteManager.py  tradingEngine.py  tradingStratInterface.py  tradingUniverse.db
src/IBJts/: API_VersionNum.txt
src/backtester/: bootstrap.py  client.py  dateMaker.py  dbento.py  instruments.py  keys.py  main.py  messageBus.py  risk.py  sma.py  sqliteManager.py  tradingEngine.py
src/backtester/db_sql/: __init__.py  queries.py
src/backtester/gui/: app.py
src/backtester/interfaces/: btEvents.py  databaseInterface.py  tradingStratInterface.py  viewInterface.py
src/backtester/strategies/: Istrategy.py  (+2 more)
src/interfaces/: btEvents.py  tradingStratInterface.py
test/: test_OAND_API.py
tests/: dailyfuturedata.csv  test_client.py  test_dataEngine.py  test_databento.py  test_dbmanager.py  test_messageBus.py  test_risk.py  test_sqliteManager.py  test_strategies.py
utils/: ATR.py
(+24 files in other folders)
